Provide ability to run from pom (typical maven lifecycle) or pomIT (scan test-jar)